Add POST /service-token, which issues JWTs to other internal services
